welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
avance()
getCouleurSol()
recule()
return true
else return false
}        
isFacingTrail();